--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
-  "name": "luxury-nyx",
+  "name": "luxury-nyx-firebase",
   "version": "1.0.0",
-  "description": "Landing page + backend to grant Drive access after Stripe payment",
+  "description": "Luxury NYX Firebase project for Google Sign-In integration.",
+  "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "node server.js",
+    "start": "node server.js",
+    "serve:firebase": "firebase emulators:start",
+    "deploy": "firebase deploy"
   },
-  "author": "Eschmerz",
-  "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "googleapis": "^105.0.0",
-    "stripe": "^12.0.0",
-    "nodemailer": "^6.9.1"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^12.5.0",
+    "googleapis": "^160.0.0",
+    "helmet": "^8.1.0",
+    "stripe": "^18.5.0"
+  },
+  "devDependencies": {
+    "firebase-tools": "^13.15.0"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "keywords": [
+    "firebase",
+    "google-sign-in",
+    "luxury-nyx"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
