chore: add .env.example without secrets; document Secret Manager usage

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,27 @@
+# Environment template (do not put real secrets in git). In production use Secret Manager / service env.
+
 # Stripe
-STRIPE_SECRET_KEY=sk_test_xxx
-STRIPE_WEBHOOK_SECRET=whsec_xxx
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
+# Optional marketing fields
+STRIPE_PRODUCT_NAME=Luxury NYX - Full Access
+STRIPE_PRODUCT_DESCRIPTION=Acceso completo • Descarga inmediata • Licencia comercial
+STRIPE_PRODUCT_IMAGE_URL=
+# Mode-specific IDs (recommended)
+STRIPE_TEST_PRODUCT_ID=
+STRIPE_TEST_PRICE_ID=
+STRIPE_LIVE_PRODUCT_ID=
+STRIPE_LIVE_PRICE_ID=
+# Admin simple token (rotate to a strong random value)
+STRIPE_ADMIN_TOKEN=
 
-# Google Drive (service account JSON path and folder)
-GOOGLE_APPLICATION_CREDENTIALS=./credentials-service-account.json
-DRIVE_FOLDER_ID=your_drive_folder_id_here
+# Google Drive (folder to grant access after payment)
+DRIVE_FOLDER_ID=
+# Optional explicit URL (ID has priority)
+DRIVE_FOLDER_URL=
 
-# SMTP (opcional) - si quieres enviar correo personalizado desde el servidor
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your_smtp_user
-SMTP_PASS=your_smtp_password
-FROM_EMAIL=no-reply@example.com
+# CORS allowlist (comma-separated)
+ALLOWED_ORIGINS=https://luxurynyx.netlify.app
 
-# Server
-PORT=3000
+# Do NOT set GOOGLE_APPLICATION_CREDENTIALS in production with Cloud Run.
+# Use Application Default Credentials (ADC) with a service account and Secret Manager.
